# learn-github-workflow

.github/workflows/: android.yml  desktop.yml  pages.yml
Chapter2/2-OpenGLES3_Primitives-Modern/: CMakeLists.txt  build_web.bat  build_web.sh  script_build_and_run.bat
Chapter2/2-OpenGLES3_Primitives-Modern/android/: build.gradle  gradle.properties  settings.gradle
Chapter2/2-OpenGLES3_Primitives-Modern/android/app/: proguard-rules.pro
Chapter2/2-OpenGLES3_Primitives-Modern/android/app/src/main/: AndroidManifest.xml
Chapter2/2-OpenGLES3_Primitives-Modern/android/app/src/main/assets/shader/: PrimitiveFragment.glsl  PrimitiveVertex.glsl
Chapter2/2-OpenGLES3_Primitives-Modern/android/app/src/main/cpp/: NativeTemplate.cpp
